--- a/Sources/GrowKit/ChatKit/Cells/UserChatCell.xib
+++ b/Sources/GrowKit/ChatKit/Cells/UserChatCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="257" id="kzD-gr-Uy5" customClass="UserChatCell" customModule="ChatKit">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="257" id="kzD-gr-Uy5" customClass="UserChatCell" customModule="GrowthKit">
             <rect key="frame" x="0.0" y="0.0" width="434" height="257"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kzD-gr-Uy5" id="YFe-XZ-j47">
